--- a/NHDai19DemoEF.Web/Areas/Admin/Views/Author/Index.cshtml
+++ b/NHDai19DemoEF.Web/Areas/Admin/Views/Author/Index.cshtml
@@ -1,66 +1,59 @@
-﻿
+﻿@using NHDai19DemoEF.Model
+@model IEnumerable<NHDai19DemoEF.Model.Book>
 @{
     ViewBag.Title = "Author";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-@*<table class="table">
-    <thead class="black white-text">
-    <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td></td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td></td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td></td>
-    </tr>
-    </tbody>
-</table>
+<section class="content-header">
+    <h1>
+        List Author
+    </h1>
+    <ol class="breadcrumb">
+        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li class="active">Author</li>
+    </ol>
+</section>
+<section class="content">
+    <div class="table-responsive text-nowrap">
+        <!--Table-->
+        <table class="table table-striped">
 
-<table class="table">
-    <thead class="grey lighten-2">
-    <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td></td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td></td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td></td>
-    </tr>
-    </tbody>
-</table>*@
+            <!--Table head-->
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Title</th>
+                    <th>Image</th>
+                    <th>Author</th>
+                    <th>Category</th>
+                    <th>Publisher</th>
+                    <th>Is Active</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <!--Table head-->
+            <!--Table body-->
+            <tbody>
+                @foreach (Book item in Model)
+                {
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>@item.Title</td>
+                        <td>@item.ImgUrl</td>
+                        <td>@item.Author.AuthorName</td>
+                        <td>@item.Category.CategoryName</td>
+                        <td>@item.Publisher.PublisherName</td>
+                        <td>@item.IsActive</td>
+                        <th>
+                            <a class="btn btn-info btn-sm" href="/Admin/Author/Edit/"><i class="fa fa-pencil"></i> Edit</a>
+                            <a class="btn btn-danger btn-sm" href="/Admin/Author/Delete/"><i class="fa fa-pencil"></i> Delete</a>
+                        </th>
+                    </tr>
+                }
+
+            </tbody>
+            <!--Table body-->
+        </table>
+        <!--Table-->
+    </div>
+</section>
