--- a/NHDai19DemoEF.Web/Areas/Admin/Views/Author/Index.cshtml
+++ b/NHDai19DemoEF.Web/Areas/Admin/Views/Author/Index.cshtml
@@ -3,56 +3,62 @@
 @{
     ViewBag.Title = "Author";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    int number = 0;
 }
 <style>
     .tableHead {
         background-color: #221D1C;
         color: aliceblue;
-
+    }
+    .content{
+        background-color:white;
     }
 </style>
-<section class="content-header">
-    <h1>
-        List Author
-    </h1>
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active">Author</li>
-    </ol>
-</section>
-<section class="content">
-    <div class="table-responsive table-bordered">
-        <!--Table-->
-        <table class="table table-striped">
+<div class="container-fluid">
+    <section class="content-header">
+        <h4>
+            <b>List Authors</b>
+        </h4>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li class="active">Author</li>
+        </ol>
+    </section>
 
-            <!--Table head-->
-            <thead class="tableHead">
-                <tr>
-                    <th>#</th>
-                    <th>Name</th>
-                    <th>History</th>
-                    <th style="width: 13%"></th>
-                </tr>
-            </thead>
-            <!--Table head-->
-            <!--Table body-->
-            <tbody>
-                @foreach (Author item in Model)
-                {
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>@item.AuthorName</td>
-                        <td>@item.History</td>
-                        <th>
-                            <a class="btn btn-tumblr btn-sm" href="/Admin/Author/Edit/@item.AuthorId"><i class="fa fa-pencil"></i> Edit</a>
-                            <a class="btn btn-adn btn-sm" href="/Admin/Author/Delete/@item.AuthorId"><i class="fa fa-pencil"></i> Delete</a>
-                        </th>
+    <section class="content">
+        <p>
+            <a class="btn btn-success" href="/Admin/Author/Create"><i class="fa fa-plus"></i> Create New</a>
+        </p>
+        <div class="table-responsive ">
+            <table class="table table-striped table-bordered">
+
+                <thead>
+                    <tr class="tableHead">
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>History</th>
+                        <th></th>
+                        <th></th>
                     </tr>
-                }
-
-            </tbody>
-            <!--Table body-->
-        </table>
-        <!--Table-->
-    </div>
-</section>
+                </thead>
+                <tbody>
+                    @foreach (Author item in Model)
+                    {
+                        number++;
+                        <tr>
+                            <th scope="row">@number</th>
+                            <td>@item.AuthorName</td>
+                            <td>@item.History</td>
+                            <th>
+                                <a class="btn btn-tumblr btn-sm" href="/Admin/Author/Edit/@item.AuthorId"><i class="fa fa-pencil"></i> Edit</a>
+                            </th>
+                            <th>
+                                <a class="btn btn-adn btn-sm" href="/Admin/Author/Delete/@item.AuthorId"><i class="fa fa-pencil"></i> Delete</a>
+                            </th>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </section>
+</div>
