--- a/NHDai19DemoEF.Web/Areas/Admin/Views/Author/Index.cshtml
+++ b/NHDai19DemoEF.Web/Areas/Admin/Views/Author/Index.cshtml
@@ -1,56 +1,128 @@
 ﻿@using NHDai19DemoEF.Model
 @model IEnumerable<NHDai19DemoEF.Model.Author>
 @{
-    ViewBag.Title = "Author";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
-    int number = 0;
+	ViewBag.Title = "Author";
+	Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+	int number = 0;
 }
+<style>
+	#search {
+		float: right;
+		margin-top: 9px;
+		width: 250px;
+	}
 
+	.search {
+		padding: 5px 0;
+		width: 230px;
+		height: 30px;
+		position: relative;
+		left: 10px;
+		float: right;
+		line-height: 22px;
+		margin-right: 11px;
+		margin-bottom: 8px;
+	}
+
+		.search input {
+			position: absolute;
+			width: 0px;
+			float: Left;
+			margin-left: 210px;
+			-webkit-transition: all 0.7s ease-in-out;
+			-moz-transition: all 0.7s ease-in-out;
+			-o-transition: all 0.7s ease-in-out;
+			transition: all 0.7s ease-in-out;
+			height: 30px;
+			line-height: 18px;
+			padding: 0 2px 0 2px;
+			border-radius: 1px;
+		}
+
+			.search:hover input, .search input:focus {
+				width: 200px;
+				margin-left: 0px;
+			}
+
+	.btn1 {
+		height: 30px;
+		position: absolute;
+		right: 0;
+		top: 5px;
+		border: none;
+	}
+</style>
 <div class="container-fluid">
-    <section class="content-header">
-        <h4>
-            <b>List Authors</b>
-        </h4>
-        <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Author</li>
-        </ol>
-    </section>
+	<section class="content-header">
+		<h4>
+			<b>List Authors</b>
+		</h4>
+		<ol class="breadcrumb">
+			<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+			<li class="active">Author</li>
+		</ol>
+	</section>
 
-    <section class="content">
-        <p>
-            <a class="btn btn-success" href="/Admin/Author/Create"><i class="fa fa-plus"></i> Create New</a>
-        </p>
-        <div class="table-responsive ">
-            <table class="table table-striped table-bordered">
-
-                <thead>
-                    <tr class="tableHead">
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>History</th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (Author item in Model)
-                    {
-                        number++;
-                        <tr>
-                            <th scope="row">@number</th>
-                            <td>@item.AuthorName</td>
-                            <td>@Html.Raw(HttpUtility.HtmlDecode(item.History))</td>
-                            <th>
-                                <a class="btn btn-tumblr btn-sm" href="/Admin/Author/Edit/@item.AuthorId"><i class="fa fa-pencil"></i> Edit</a>
-                            </th>
-                            <th>
-                                <a class="btn btn-adn btn-sm" href="/Admin/Author/Delete/@item.AuthorId"><i class="fa fa-pencil"></i> Delete</a>
-                            </th>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    </section>
+	<section class="content">
+		<div class="row">
+			<div class="col-md-6">
+				<a class="btn btn-success" href="/Admin/Author/Create"><i class="fa fa-plus"></i> Create New</a>
+			</div>
+			<div class="col-md-6">
+				<div class="search">
+					<form action="/Admin/Author/Index" method="post">
+						<input type="text" name="keySearch" class="form-control input-sm" maxlength="64" placeholder="Search" />
+						<button type="submit" id="btnSearch" class="btn1 btn-primary">Search</button>
+					</form>
+				</div>
+			</div>
+		</div>
+		<div class="table-responsive ">
+			<table class="table table-striped table-bordered" id="mytable">
+				<thead>
+					<tr class="tableHead">
+						<th>#</th>
+						<th>Name</th>
+						<th>History</th>
+						<th></th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					@foreach (Author item in Model)
+					{
+						number++;
+						<tr>
+							<th scope="row">@number</th>
+							<td>@item.AuthorName</td>
+							<td>@Html.Raw(HttpUtility.HtmlDecode(item.History))</td>
+							<th>
+								<a class="btn btn-tumblr btn-sm" href="/Admin/Author/Edit/@item.AuthorId"><i class="fa fa-pencil"></i> Edit</a>
+							</th>
+							<th>
+								<a class="btn btn-adn btn-sm" href="/Admin/Author/Delete/@item.AuthorId"><i class="fa fa-pencil"></i> Delete</a>
+							</th>
+						</tr>
+					}
+				</tbody>
+			</table>
+		</div>
+	</section>
 </div>
+@section scripts {
+	<script>
+		$(document).ready(function () {
+			$('#btnSearch').click(function () {
+				$.ajax({
+					type: 'GET',
+					url: '@Url.Action("Index","Author")',
+					dataType: 'json',
+					contentType: 'application/json',
+					success: function (result) {
+						$("#mytable").html(result);
+					}
+				});
+			});
+		});
+	</script>
+}
